changed the logic of showing both contact list and add form all in single page because the requirement was to show Add contact only upon button click. Added author name and comments to all ejs and js pages.
changed the logic of showing both contact list and add form all in single page because the requirement was to show Add contact only upon button click. Added author name and comments to all ejs and js pages.

--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -1,5 +1,15 @@
+<!--This view has login contents 
+File Name: login.ejs 
+Name: Vaishali Siddeshwar
+Student ID: 301172372
+Date: Feb-28-2021
+-->
+
+ <!-- render a fixed header content. This has 
+non-UI elements. This contains only <head> tags -->
 <%- include ../partials/header.ejs %>
 
+ <!-- render a fixed navigation content for all HTTP requests.--> 
 <%- include ../partials/main_nav.ejs %>
 <section class="login-area">
 <div class="mt-3">
@@ -37,6 +47,9 @@
   </div>
 </div>
 </section>
+
+<!-- render a copyright content for all requests.--> 
 <%- include ../partials/bottom_nav.ejs %>  
 
+<!-- This contains non-UI elements. But closing of body and html tags.--> 
 <%- include ../partials/footer.ejs %>
