--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,3 +1,15 @@
+<!--This view has login contents 
+File Name: login.ejs 
+Name: Vaishali Siddeshwar
+Student ID: 301172372
+Date: Feb-28-2021
+-->
+
+ <!-- render a fixed header content. This has 
+non-UI elements. This contains only <head> tags -->
+<%- include ../partials/header.ejs %>
+
+ <!-- render a fixed navigation content for all HTTP requests.--> 
 <%- include ../partials/header.ejs %>
 
     <%- include ../partials/main_nav.ejs %>
@@ -40,8 +52,8 @@
             </div>
         </section>
 
+<!-- render a copyright content for all requests.--> 
+<%- include ../partials/bottom_nav.ejs %>
 
-
-        <%- include ../partials/bottom_nav.ejs %>
-
-            <%- include ../partials/footer.ejs %>
+<!-- This contains non-UI elements. But closing of body and html tags.--> 
+<%- include ../partials/footer.ejs %>
