--- a/server/views/businesscontacts/addbusinesscontacts.ejs
+++ b/server/views/businesscontacts/addbusinesscontacts.ejs
@@ -1,11 +1,31 @@
+<!--This partial has Contact page contents 
+Purpose: Business contact Add or Update form 
+Name: Vaishali Siddeshwar
+Student ID: 301172372
+Date: Feb-26-2021
+-->
+
+ <!-- render a fixed header content. This has 
+non-UI elements. This contains only <head> tags
+--> 
+<%- include ../partials/header.ejs %>
+
+ <!-- render a fixed navigation content for all HTTP requests.--> 
+<%- include ../partials/main_nav.ejs %>
+
 <!--Content for Add Contact-->
-<section>
+<section class="businesscontacts-area">
+    <div class="container">
+        <h2 class="text-uppercase pt-5">
+         <span> Edit Contact</span> 
+       </h2>
+         
+       <hr>
+       <div class="row">
     <div class="container">
         <div class="row">
-            <div class="offset-md-2 col-md-8">
-                <h3>
-                  <span>Add/Edit Contact</span>  
-                </h3>
+            <div class="offset-md-2 col-md-5">
+                
 
                 <div class="container">
                     <form id="addcontact" method="POST">
@@ -31,9 +51,19 @@
                         <a class="btn btn-warning" onclick="Clearform()">
                             <i class="fas fa-undo"></i> Clear
                         </a>
+                        <a class="btn btn-secondary" href="/businesscontacts/">
+                            <i class="fas fa-lg fa-arrow-circle-left"></i> Return
+                        </a>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+
+<!-- render a copyright content for all requests.--> 
+<%- include ../partials/bottom_nav.ejs %>
+
+<!-- This contains non-UI elements. But closing of body and html tags.--> 
+<%- include ../partials/footer.ejs %>
